export interface Grado {
  id: number;
  nameGrade: string;
}
