export interface Materia {
  id: number;
  nameSubject: string;
  description?: string;
}
