export interface Matricula {
  id: number;
  nameStudents: string;
  lastNameStudent: string;
  nameGrade: string;
  enrollmentDate?: string;
  enrollmentsState?: string;
}
