export interface Nota {
  id: number;
  studentName: string;
  studentLastName: string;
  subjectName?: string;
  value: number;
  period?: string;
}
