export interface Profesor {
  id: number;
  name: string;
  lastName: string;
  email: string;
  phone?: string;
  address?: string;
  role?: string;
}
